Bug #8902 mysql.proc.sql_mode column definition is incomplete
Submitted: 2 Mar 2005 20:55 Modified: 12 Mar 2005 5:46
Reporter: Paul DuBois
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:5.0.3 OS:
Assigned to: Jim Winstead Target Version:

[2 Mar 2005 20:55] Paul DuBois
Description:
The mysql.proc.sql_mode column is defined as an ENUM
with members that parallel the possible sql_mode
system variable values.

However, the set of values in the mysql.proc table
definition ends with NO_AUTO_VALUE_ON_ZERO.
Quite a few SQL mode values have been added
that are not included.

How to repeat:
DESCRIBE mysql.proc sql_mode;

Suggested fix:
Update scripts/mysql_create_system_tables.sh.

Maybe add a comment to sql/mysql_priv.h to the
effect that when new SQL modes are added,
mysql_create_system_tables.sh also needs to
be updated.
[2 Mar 2005 22:46] Jorge del Conde
Verified using todays todays bk tree
[9 Mar 2005 2:37] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/22813
[12 Mar 2005 1:04] Jim Winstead
Pushed, will be in 5.0.3.
[12 Mar 2005 5:46] Paul DuBois
Noted in 5.0.3 changelog.