Add all SQL_MODE settings to proc table. (Bug #8902)